tests/machine/x/st/in_operator.st
| xs |
xs := {1. 2. 3}.
Transcript show: ((2 in xs)) printString; cr.
Transcript show: ((5 in xs) not) printString; cr.
